--- a/src/containers/Auth/authController.scss
+++ b/src/containers/Auth/authController.scss
@@ -10,9 +10,7 @@
       box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     }
 
-    label {
-      padding: 10px 0px;
-    }
+    label { padding: 10px 0px; }
 
     input {
       width: 100%;
