style table and button

--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -12,6 +12,10 @@
       .clock-in {
         padding: 10px 40px;
         border-radius: 5px;
+        background: #594c4c;
+        color: white;
+        font-weight: bold;
+        font-size: 15px;
       }
     }
   }
