--- a/src/styles/authController.scss
+++ b/src/styles/authController.scss
@@ -1,40 +1,74 @@
 @import './colors';
 
-.auth-controller {
-  width: 50%;
-  margin: 0 auto;
+.auth-page {
+  height: 100vh;
+  background-color: $primary-color;
 
-  .auth-card {
-    padding: 1rem;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    &:hover {
-      box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  .error-message {
+    color: red;
+    text-align: center;
+    padding: 0.2rem 0;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+  .auth-controller {
+    width: 50%;
+    margin: auto;
+    padding-top: 30px;
+
+    .auth-introduction-text {
+      text-align: center;
+      color: #FEED7F;
+      font-weight: bold;
     }
 
-    label { padding: 10px 0px; }
-
-    input {
-      width: 100%;
-      border: 1px solid #f2f2f2;
-      padding: 10px 0;
-      margin: 0.5rem 0;
-    }
-
-    .auth-btn {
-      width: 200px;
-      background-color: $primary-color;
-      border: 1px solid $primary-color;
+    .auth-card {
+      padding: 1.5rem 4rem;
+      background-color: white;
       border-radius: 5px;
-      color: #fff;
-      margin-right: 10px;
-      padding: 10px;
-    }
+      min-height: 40vh;
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      transition: 0.3s;
+      &:hover {
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+      }
 
-    .call-to-action {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      label { padding: 10px 0px; }
+
+      input {
+        width: 100%;
+        border: 1px solid #f2f2f2;
+        padding: 15px 5px;
+        margin: 0.5rem 0;
+        font-size: 14px;
+
+        &:focus {
+          outline: none;
+        }
+      }
+
+      .form-group + .form-group {
+        margin-top: 0.5rem;
+      }
+
+      .auth-btn {
+        width: 200px;
+        background-color: $primary-color;
+        border: 1px solid $primary-color;
+        border-radius: 5px;
+        color: #fff;
+        margin-right: 10px;
+        cursor: pointer;
+        padding: 10px;
+      }
+
+      .call-to-action {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 2rem;
+      }
     }
   }
 }
