--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -3,18 +3,33 @@
 .banner {
   transition: all 0.5s ease-in-out;
 
+  .nav-brand {
+    font-weight: bold;
+    font-size: 16px;
+  }
+
+  .nav-list {
+    display: flex;
+    align-items: center;
+  }
+
   // nav custom
   margin-top: 0px;
-  padding: 10px 0px;
+  padding: 25px 0px;
   background-color: $primary-color;
   box-shadow: 0 10px 33px rgba(0, 0, 0, .1);
-  color: #fff;
+  color: #FEED75;
 
   // fixed top
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
+
+  .current-user {
+    font-weight: bold;
+    font-size: 16px;
+  }
 
 
   @media (min-width: 600px)  {
