--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -33,6 +33,14 @@
         cursor: pointer;
       }
     }
+
+    .notice {
+      text-align: center;
+      padding: 0.2rem 0;
+      font-size: 14px;
+      text-transform: uppercase;
+      font-weight: bold;
+    }
   }
 
   .clock-in-table {
