--- a/src/styles/authController.scss
+++ b/src/styles/authController.scss
@@ -61,6 +61,8 @@
         margin-right: 10px;
         cursor: pointer;
         padding: 10px;
+        font-weight: bold;
+        font-size: 18px;
       }
 
       .call-to-action {
